--- a/main_app/templates/register.html
+++ b/main_app/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "form_base.html" %}
+{% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Register{% endblock %}
 {% block page_content %}
