--- a/main_app/templates/ok.html
+++ b/main_app/templates/ok.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+    #map {
+        height: 100%;
+      }
+    </style>
 </head>
 <body>
 
 
 {% block page_content %}
     <div class="page-header">
-    <h1>Hello,{{ name }}</h1>
-</div>
-
+    </div>
+<iframe src="http://127.0.0.1:5000/static/map.html"
+        name="ifd"
+        onload="this.height=ifd.document.body.scrollHeight"
+        width="100%" scrolling="no" frameborder="0"></iframe>
 {% endblock %}
 </body>
 </html>
