add map location and search

--- a/main_app/templates/maps/map_startup.html
+++ b/main_app/templates/maps/map_startup.html
@@ -1,48 +1,23 @@
 {% include 'header.html' %}
 
 <body>
+    <div id="search">
+        <div class="search-input-box">
+            <div class="search-input-group">
+                <div class="search-icon" type="button"></div>
+                <input id="search-input" type="text" placeholder="Search">
+            </div>
+        </div>
+        <ul id="search-info"></ul>
+    </div>
     <div id="map"></div>
-    <script>
-        // Instantiate map to the div with id "map"
-        var MapsAccountKey = "KvO9Xix-Fn8WuxK8VKnqSm7tukA-aPgycdk-tEpxoNk";
-        var map = new atlas.Map("map", {
-            "subscription-key": MapsAccountKey
-        });
-
-        function getLocation(position) {
-            new atlas.data.Point([position.coords.latitude, position.coords.longitude]);
-        }
-
-        var startPoint = navigator.geolocation.getCurrentPosition(getLocation);
-        // Create the GeoJSON objects which represent the start and end point of the route
-
-        var startPin = new atlas.data.Feature(startPoint, {
-            title: "Current Location",
-            icon: "pin-round-blue"
-        });
-
-        $(document).ready(function() {
-            var swLon = startPoint.coordinates[0];
-            var swLat = startPoint.coordinates[1];
-            var neLon = startPoint.coordinates[0];
-            var neLat = startPoint.coordinates[1];
-            map.setCameraBounds({
-                bounds: [swLon, swLat, neLon, neLat],
-                padding: 50
-            });
-
-            // Add pins to the map for the start and end point of the route
-            map.addPins([startPin], {
-                name: "Current Location",
-                textFont: "SegoeUi-Regular",
-                textOffset: [0, -20]
-            });
-
-        });
-
-
-
-    </script>
+    <div id="location" style="display: none">
+        <input type="text" id="start_lon" class="start_loc">
+        <input type="text" id="start_lat" class="start_loc">
+        <input type="text" id="dest_lon" class="dest_loc">
+        <input type="text" id="dest_lat" class="dest_loc">
+    </div>
+    <script src="/static/js/maps.js"></script>
 </body>
 
 </html></title>
