--- a/main_app/templates/header.html
+++ b/main_app/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><!DOCTYPE html>
+    <title>Routien Planner</title>
 <html lang="en">
 
 <head>
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Map Route</title>
     <link rel="stylesheet" href="https://atlas.microsoft.com/sdk/css/atlas.min.css?api-version=1.0" type="text/css" />
+    <link rel="stylesheet" href="/static/css/maps.css" type="text/css" />
     <script src="https://atlas.microsoft.com/sdk/js/atlas.min.js?api-version=1.0"></script>
     <script
           src="https://code.jquery.com/jquery-3.3.1.min.js"
