--- a/main_app/templates/maps/map.html
+++ b/main_app/templates/maps/map.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,15 +36,15 @@
             "subscription-key": MapsAccountKey
         });
         // Create the GeoJSON objects which represent the start and end point of the route
-        var startPoint = new atlas.data.Point([-122.130137, 47.644702]);
+        var startPoint = new atlas.data.Point([150.05237, -32.83061]);
         var startPin = new atlas.data.Feature(startPoint, {
-            title: "Microsoft",
+            title: "UNSW",
             icon: "pin-round-blue"
         });
 
-        var destinationPoint = new atlas.data.Point([-122.3352, 47.61397]);
+        var destinationPoint = new atlas.data.Point([150.0527, -32.837]);
         var destinationPin = new atlas.data.Feature(destinationPoint, {
-            title: "Contoso Oil & Gas",
+            title: "Moore park",
             icon: "pin-blue"
         });
         var swLon = Math.min(startPoint.coordinates[0], destinationPoint.coordinates[0]);
@@ -100,40 +99,40 @@
         xhttp.open("GET", url, true);
         xhttp.send();
 
-        var searchLayerName="bike";
-        var text='{"results":[{"type":"POI","dist":4225.412374672882,"poi":{"name":"Stay Tuned Bikes"},"position":{"lat":47.61999,"lon":-122.179},"viewport":{"topLeftPoint":{"lat":47.62089,"lon":-122.18033},"btmRightPoint":{"lat":47.61909,"lon":-122.17767}}}]}';
-        var response = JSON.parse(text);
-        var poiResults = response.results.filter((result) => { return result.type === "POI" }) || [];
-        var distbike=0;
 
-        async function getdist(url)
-        {
-            $.get(url,function(response){
-            dist=response.routes[0].summary.lengthInMeters;
-                return dist
-            });
-        }
+        //bike
 
-         function pointsget(){ poiResults.map(async (poiResult) => {
-            var distq="https://atlas.microsoft.com/route/directions/json?subscription-key=KvO9Xix-Fn8WuxK8VKnqSm7tukA-aPgycdk-tEpxoNk&api-version=1.0&query=52.50931,13.42936:52.50274,13.43872"
-            var poiPosition = [poiResult.position.lon, poiResult.position.lat];
-            distbike=await getdist(distq);
-            return new atlas.data.Feature(new atlas.data.Point(poiPosition), {
-                name: distbike,
-                position: poiResult.position.lat + ", " + poiResult.position.lon
-            });
-        });
-        }
-
-        function addpin(pointsget){
-            searchPinres=pointsget();
-        }
-
-        map.addPins(pointsget(), {
+        var searchLayerName = "search-results";
+        map.addPins([], {
             name: searchLayerName,
             cluster: false,
             icon: "pin-round-darkblue"
         });
+
+        var xhttp2 = new XMLHttpRequest();
+        xhttp2.onreadystatechange = function () {
+            var searchPins = [];
+            if (this.readyState == 4 && this.status == 200) {
+                var response = JSON.parse(xhttp2.responseText);
+                var poiResults = response.filter((result) => { return result });
+                searchPins = poiResults.map((poiResult) => {
+                    var poiPosition = [poiResult.position.lon, poiResult.position.lat];
+                    return new atlas.data.Feature(new atlas.data.Point(poiPosition), {
+                        name: poiResult.dist,
+                        position: poiResult.position.lat + ", " + poiResult.position.lon
+                    });
+                });
+
+                map.addPins(searchPins, {
+                    name: searchLayerName
+                });
+            }
+        };
+        var url = "map/addbikepin?";
+        url += "&" + startPoint.coordinates[1] + "," + startPoint.coordinates[0]
+
+        xhttp2.open("GET", url, true);
+        xhttp2.send();
 
         // Add a popup to the map which will display some basic information about a search result on hover over a pin
         var popup = new atlas.Popup();
@@ -155,105 +154,4 @@
     </script>
 </body>
 
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Map Route</title>
-    <link rel="stylesheet" href="https://atlas.microsoft.com/sdk/css/atlas.min.css?api-version=1.0" type="text/css" />
-    <script src="https://atlas.microsoft.com/sdk/js/atlas.min.js?api-version=1.0"></script>
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-
-        #map {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="map"></div>
-    <script>
-        // Instantiate map to the div with id "map"
-        var MapsAccountKey = "KvO9Xix-Fn8WuxK8VKnqSm7tukA-aPgycdk-tEpxoNk";
-        var map = new atlas.Map("map", {
-            "subscription-key": MapsAccountKey
-        });
-        // Create the GeoJSON objects which represent the start and end point of the route
-        var startPoint = new atlas.data.Point([-122.130137, 47.644702]);
-        var startPin = new atlas.data.Feature(startPoint, {
-            title: "Microsoft",
-            icon: "pin-round-blue"
-        });
-
-        var destinationPoint = new atlas.data.Point([-122.3352, 47.61397]);
-        var destinationPin = new atlas.data.Feature(destinationPoint, {
-            title: "Contoso Oil & Gas",
-            icon: "pin-blue"
-        });
-        var swLon = Math.min(startPoint.coordinates[0], destinationPoint.coordinates[0]);
-        var swLat = Math.min(startPoint.coordinates[1], destinationPoint.coordinates[1]);
-        var neLon = Math.max(startPoint.coordinates[0], destinationPoint.coordinates[0]);
-        var neLat = Math.max(startPoint.coordinates[1], destinationPoint.coordinates[1]);
-        map.setCameraBounds({
-            bounds: [swLon, swLat, neLon, neLat],
-            padding: 50
-        });
-
-        // Add pins to the map for the start and end point of the route
-        map.addPins([startPin, destinationPin], {
-            name: "route-pins",
-            textFont: "SegoeUi-Regular",
-            textOffset: [0, -20]
-        });
-        // Initialize the linestring layer for routes on the map
-        var routeLinesLayerName = "routes";
-        map.addLinestrings([], {
-            name: routeLinesLayerName,
-            color: "#2272B9",
-            width: 5,
-            cap: "round",
-            join: "round",
-            before: "labels"
-        });
-
-        // Perform a request to the route service and draw the resulting route on the map
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200) {
-                var response = JSON.parse(xhttp.responseText);
-
-                var route = response.routes[0];
-                var routeCoordinates = [];
-                for (var leg of route.legs) {
-                    var legCoordinates = leg.points.map((point) => [point.longitude, point.latitude]);
-                    routeCoordinates = routeCoordinates.concat(legCoordinates);
-                }
-
-                var routeLinestring = new atlas.data.LineString(routeCoordinates);
-                map.addLinestrings([new atlas.data.Feature(routeLinestring)], { name: routeLinesLayerName });
-            }
-        };
-        var url = "https://atlas.microsoft.com/route/directions/json?";
-        url += "api-version=1.0";
-        url += "&subscription-key=" + MapsAccountKey;
-        url += "&query=" + startPoint.coordinates[1] + "," + startPoint.coordinates[0] + ":" +
-            destinationPoint.coordinates[1] + "," + destinationPoint.coordinates[0];
-
-        xhttp.open("GET", url, true);
-        xhttp.send();
-    </script>
-</body>
-
->>>>>>> 498c60b235a3bc631c7906115a2cae2a2cd7f6c2
 </html>
