--- a/main_app/templates/maps/map_startup.html
+++ b/main_app/templates/maps/map_startup.html
@@ -4,7 +4,6 @@
     <div id="search">
         <div class="search-input-box">
             <div class="search-input-group">
-                <div class="search-icon" type="button"></div>
                 <input id="search-input" type="text" placeholder="Search">
             </div>
         </div>
@@ -12,6 +11,7 @@
         <ul id="route-list" class="list-group"></ul>
     </div>
     <div id="map"></div>
+    <button type="button" class="btn btn-primary" id="button">Take a Ride</button>
     <div id="location" style="display: none">
         <input type="text" id="start_lon" class="start_loc" value="151.2218849">
         <input type="text" id="start_lat" class="start_loc" value="-33.905051">
