--- a/main_app/templates/maps/map.html
+++ b/main_app/templates/maps/map.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Map Route</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="https://atlas.microsoft.com/sdk/css/atlas.min.css?api-version=1.0" type="text/css" />
     <script src="https://atlas.microsoft.com/sdk/js/atlas.min.js?api-version=1.0"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js">
@@ -22,12 +25,24 @@
             width: 100%;
             height: 100%;
         }
+
+        #button {
+            position: absolute;
+            z-index: 1;
+            right: 10px;
+            bottom: 10px;
+            box-shadow: 0px 24px 74px 0px rgba(0, 0, 0, .32);
+            border: 1px solid #ccc;
+            overflow-y: hidden;
+        }
     </style>
 </head>
 
 <body>
 
     <div id="map"></div>
+    <button type="button" class="btn btn-primary" id="button">Take a Bus</button>
+    
     <script>
 
         // Instantiate map to the div with id "map"
@@ -53,7 +68,7 @@
         var neLat = Math.max(startPoint.coordinates[1], destinationPoint.coordinates[1]);
         map.setCameraBounds({
             bounds: [swLon, swLat, neLon, neLat],
-            padding: 200
+            padding: 100
         });
 
         // Add pins to the map for the start and end point of the route
@@ -64,44 +79,60 @@
         });
         // Initialize the linestring layer for routes on the map
         var routeLinesLayerName = "routes";
-        map.addLinestrings([], {
-            name: routeLinesLayerName,
-            color: "#2272B9",
+        // map.addLinestrings([], {
+        //     name: routeLinesLayerName,
+        //     color: "#2272B9",
+        //     width: 5,
+        //     cap: "round",
+        //     join: "round",
+        //     before: "labels"
+        // });
+
+        var routeLineOption = {
             width: 5,
             cap: "round",
-            join: "round",
-            before: "labels"
-        });
+            join: "round"
+        };
 
         // Perform a request to the route service and draw the resulting route on the map
-        var xhttp = new XMLHttpRequest();
+        function getRoute(startPoint, destinationPoint, travelMode="default") {
+            var xhttp = new XMLHttpRequest();
 
-        xhttp.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200) {
-                var response = JSON.parse(xhttp.responseText);
-                console.log(response);
-                var route = response.routes[0];
-                var routeCoordinates = [];
-                for (var leg of route.legs) {
-                    var legCoordinates = leg.points.map((point) => [point.longitude, point.latitude]);
-                    routeCoordinates = routeCoordinates.concat(legCoordinates);
+            xhttp.onreadystatechange = function () {
+                if (this.readyState == 4 && this.status == 200) {
+                    var response = JSON.parse(xhttp.responseText);
+                    console.log(response);
+                    var route = response.routes[0];
+                    var routeCoordinates = [];
+                    for (var leg of route.legs) {
+                        var legCoordinates = leg.points.map((point) => [point.longitude, point.latitude]);
+                        routeCoordinates = routeCoordinates.concat(legCoordinates);
+                    }
+
+                    var routeLinestring = new atlas.data.LineString(routeCoordinates);
+                    if(travelMode == 'walk') {
+                        routeLineOption.color = "#191818";
+                        routeLineOption.name = travelMode;
+                    } else {
+                        routeLineOption.color = "#2272B9";
+                        routeLineOption.name = travelMode;
+                    }
+                    map.addLinestrings([new atlas.data.Feature(routeLinestring)], routeLineOption);
                 }
+            };
+            var url = "https://atlas.microsoft.com/route/directions/json?";
+            url += "api-version=1.0";
+            url += "&subscription-key=" + MapsAccountKey;
+            url += "&travelMode=bicycle";
+            url += "&query=" + startPoint[1] + "," + startPoint[0] + ":" +
+                destinationPoint[1] + "," + destinationPoint[0];
 
-                var routeLinestring = new atlas.data.LineString(routeCoordinates);
-                map.addLinestrings([new atlas.data.Feature(routeLinestring)], { name: routeLinesLayerName });
-            }
-        };
-        var url = "https://atlas.microsoft.com/route/directions/json?";
-        url += "api-version=1.0";
-        url += "&subscription-key=" + MapsAccountKey;
-        url += "&travelMode=bicycle";
-        url += "&query=" + startPoint.coordinates[1] + "," + startPoint.coordinates[0] + ":" +
-            destinationPoint.coordinates[1] + "," + destinationPoint.coordinates[0];
+            xhttp.open("GET", url, true);
+            xhttp.send();
+        }
 
-        xhttp.open("GET", url, true);
-        xhttp.send();
-
-
+        getRoute(startPoint.coordinates, destinationPoint.coordinates)
+        
         //bike
 
         var searchLayerName = "search-results";
@@ -153,6 +184,32 @@
 
             popup.open(map);
         });
+
+        map.addEventListener("click", searchLayerName, (e) => {
+            var bikePosition = e.features[0].geometry.coordinates;
+            map.removeLayers(['default', 'walk', 'bike']);
+            getRoute(startPoint.coordinates, bikePosition, 'walk');
+            getRoute(bikePosition, destinationPoint.coordinates, 'bike')
+
+            // var popupContentElement = document.createElement("div");
+            // popupContentElement.style.padding = "5px";
+
+            // var popupNameElement = document.createElement("div");
+            // popupNameElement.innerText = e.features[0].properties.name;
+            // popupContentElement.appendChild(popupNameElement);
+
+            // popup.setPopupOptions({
+                
+            //     content: popupContentElement
+            // });
+
+            // popup.open(map);
+        });
+
+        $("#button").click(function(){
+            window.location.replace('display');
+        })
+
     </script>
 </body>
 
